# FourierSeriesAnimation

./: Cargo.toml
src/: main.rs  ui.rs
src/ui/: frame_history.rs  svg_select.rs  window.rs
src/ui/window/: fourier_animation.rs  svg_preview.rs
src/util/: math.rs
