[package]
name = "FourierSeriesAnimation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
egui_demo_lib = "0.14"
svg = "0.10.0"
num = "0.4"
thiserror = "1.0.29"
